--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,11 +8,16 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "django (>=5.2.5,<6.0.0)"
+    "django (>=5.2.5,<6.0.0)",
 ]
 
 [tool.poetry]
 package-mode = false
+
+[tool.poetry.group.dev.dependencies]
+pre-commit = "^4.2.0"
+pylint = "^3.3.7"
+isort = "^6.0.1"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
